Prevent logo from jumping by resetting line height

--- a/css/global.css
+++ b/css/global.css
@@ -2293,6 +2293,7 @@ pre {
 }
 
 .site-title {
+	line-height: 0;
 	margin: 0;
 }
 
