--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -19,6 +19,7 @@
 }
 
 .site-title {
+  line-height: 0;
   margin: 0;
 
   a {
